完成tag相关内容
