# docs/swagger.yaml
@@ -16,6 +16,10 @@ definitions:
     type: object
   model.ComicDetail:
     properties:
+      authors:
+        items:
+          $ref: '#/definitions/model.ComicTag'
+        type: array
       comic_id:
         type: string
       cover:
@@ -26,6 +30,18 @@ definitions:
         type: array
       description:
         type: string
+      redirect:
+        type: boolean
+      redirect_url:
+        type: string
+      status:
+        type: string
+      tags:
+        items:
+          $ref: '#/definitions/model.ComicTag'
+        type: array
+      timestamp:
+        type: integer
       title:
         type: string
     type: object
@@ -40,14 +56,27 @@ definitions:
       title:
         type: string
     type: object
+  model.ComicTag:
+    properties:
+      cover:
+        type: string
+      tag_id:
+        type: string
+      title:
+        type: string
+    type: object
   model.Node:
     properties:
       address:
+        type: string
+      description:
         type: string
       name:
         type: string
       timestamp:
         type: integer
+      title:
+        type: string
       token:
         type: string
       trust:
@@ -687,6 +716,34 @@ paths:
       summary: 获取服务器状态
       tags:
       - server
+  /tag/{tag_id}:
+    get:
+      description: 通过tag_id获取所有tag
+      parameters:
+      - description: 分类ID
+        in: path
+        name: tag_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.StandJsonStruct'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.ComicDetail'
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.StandJsonStruct'
+      summary: 获取分类列表
+      tags:
+      - tag
   /upload/image:
     post:
       consumes:
